--- a/projects/03-yolov8-tensorrt/requirements.txt
+++ b/projects/03-yolov8-tensorrt/requirements.txt
@@ -1,5 +1,21 @@
 ultralytics>=8.0.0
-tensorrt>=8.0.0
+# tensorrt>=8.0.0          # Requires NVIDIA GPU and Linux/Windows
+# pycuda>=2022.1           # Requires NVIDIA driver, not available on macOS
+opencv-python>=4.8.0
+numpy>=1.21.0
+# torch>=2.0.0            # No macOS wheel; use CPU‑only build instead
+# torchvision>=0.15.0    # Depends on torch, comment out for macOS
+onnx>=1.14.0
+onnxruntime>=1.15.0
+Pillow>=9.0.0
+matplotlib>=3.5.0
+tqdm>=4.65.0
+scipy>=1.9.0
+psutil>=5.9.0
+pandas>=1.5.0
+seaborn>=0.12.0
+# Optional: install CPU‑only torch manually if needed
+# pip install "torch==2.0.1+cpu" -f https://download.pytorch.org/whl/torch_stable.htmltensorrt>=8.0.0
 opencv-python>=4.8.0
 numpy>=1.21.0
 pycuda>=2022.1
