1. Makefile - benchmark에 모든 커널 파일 포함, -DBENCHMARK_MODE 플래그 추가   2. benchmark.cu - TILE_SIZE를 TIL_SIZE로, TILE_WIDTH를 TIL_WIDTH로 변경   3. optimized_matmul.cu - BLOCK_SIZE를 BLK_SIZE로 변경, main을 #ifndef BENCHMARK_MODE로 감싸기   4. naive_matmul.cu - main을 #ifndef BENCHMARK_MODE로 감싸기   5. tiled_matmul.cu - main을 #ifndef BENCHMARK_MODE로 감싸기

--- a/projects/02-cuda-matrix-multiplication/Makefile
+++ b/projects/02-cuda-matrix-multiplication/Makefile
@@ -57,9 +57,9 @@ $(BIN_DIR)/tiled_matmul: $(SRC_DIR)/tiled_matmul.cu $(SRC_DIR)/utils.cu
 $(BIN_DIR)/optimized_matmul: $(SRC_DIR)/optimized_matmul.cu $(SRC_DIR)/utils.cu
 	$(NVCC) $(NVCC_FLAGS) $(INCLUDES) $^ -o $@ $(LIBS)
 
-# Benchmark suite
-$(BIN_DIR)/benchmark: $(SRC_DIR)/benchmark.cu $(SRC_DIR)/utils.cu
-	$(NVCC) $(NVCC_FLAGS) $(INCLUDES) $^ -o $@ $(LIBS)
+# Benchmark suite - needs all kernel files for linking
+$(BIN_DIR)/benchmark: $(SRC_DIR)/benchmark.cu $(SRC_DIR)/utils.cu $(SRC_DIR)/naive_matmul.cu $(SRC_DIR)/tiled_matmul.cu $(SRC_DIR)/optimized_matmul.cu
+	$(NVCC) $(NVCC_FLAGS) $(INCLUDES) -DBENCHMARK_MODE $^ -o $@ $(LIBS)
 
 # Debug builds
 debug: NVCC_FLAGS = $(GPU_ARCH) $(DEBUG_FLAGS) -std=c++14
